# CoLi-BA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_compare.py
src/: main.cc  run_ba_ceres.cc  run_ba_coli.cc  run_ba_g2o.cc  run_ba_solver.h
src/base/: ba_graph.h  camera.h  map.h  map_io.hpp
src/optim/: ba_block.h  ceres_cost_function.h  linear_solver.cc  linear_solver.h  linear_solver_coli.cc  linear_solving.cc  lm_minimizer.cc  lm_minimizer.h  local_parameterization.cc  local_parameterization.h
src/utility/: global.h  matrix_math.h  timer.h
